2006-06-23  Alvaro Navarro <anavarro@gsyc.escet.urjc.es>

	* intermediate.py: intermediate tables algorithm
	* modrequest.py: new file added
	* cvsanaly-web: web engine added

2006-06-20  Alvaro Navarro 	<anavarro@gsyc.escet.urjc.es>

	* new version from scratch
	* INSTALL: new file added
	* pycvsanaly: renamed directory
	* wizard.py: removed automatic creating of database
	* file.py: new class that stores file info
	* commiter.py: new class that stores commiters
	* commit.py: new class that stores commit log
	* directory.py: new class that stores directories (now modules)
	* database.py: SQL wrapper
	* connection.py: framework in order to create connections
	* tables.py: dictionary format for tables

2005-09-15 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* db.py, cvsanal_log, cvsanal_file_log2sql: fixed bug. modules with
	blank space crashed mysql_server.

2005-07-26 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_file_svn2file: first svn beta support

2005-07-24 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_file_svn2file: new functions to add commiters and
	commiters_module. New fixed Bugs.
	* cvsanal_module_log2sql: fully implementation of SVN functions

2005-07-21 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_tree: new improves
	* cvsanal_file_svn2file: directories, files, commiter_module and
	commiters working

2005-07-18 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_tree: fixed bugs in father_id
	* cvsanal_file_svn2file: now we have to call 'tree2mysql' without name
	arguemt.

2005-07-18 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_tree:	new implementation for directories.
	* cvsanal_file_svn2file: new improves in files/directories

2005-07-04 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_file_svn2file: directories and files working with svn

2005-07-03 Alvaro Navarro	<anavarro@gsyc.escet.urjc.es>

	* cvsanal_file_svn2file: authors, commiters_module, modules works
